# mit6.036

./: README.md  main.py  pyproject.toml
stats_models_examples/: getting_started.ipynb
tests/: test_mit6_036.py
