[tool.poetry]
name = "mit6.036"
version = "0.1.0"
description = ""
authors = ["Janvier Uwiragiye <uwiragiyejanvi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.13.7"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
